@@ -30,20 +30,20 @@
   values, or else by "p1", "p2", ..., if names are not provided.
 }
 \examples{
-ans <- opm(fn = function(x) sum(x*x), par = 1:2, method="ALL", control=list(trace=1))
-coef(ans)
+ans <- opm(fn = function(x) sum(x*x), par = 1:2, method="ALL", control=list(trace=0))
+print(coef(ans))
 
-ansx <- optimx(fn = function(x) sum(x*x), par = 1:2, control=list(all.methods=TRUE, trace=1))
-coef(ansx)
+ansx <- optimx(fn = function(x) sum(x*x), par = 1:2, control=list(all.methods=TRUE, trace=0))
+print(coef(ansx))
 
 
 \dontrun{
 proj <- function(x) x/sum(x)
 f <- function(x) -prod(proj(x))
 ans <- opm(1:2, f)
-ans
+print(ans)
 coef(ans) <- apply(coef(ans), 1, proj)
-ans
+print(ans)
 }
 
 }
